--- a/index.html
+++ b/index.html
@@ -8,20 +8,43 @@
   </head>
 
   <body>
-    <!-- Write your HTML here -->
+    <div class="body-container">
+      <div class="container">
+        <!-- Main colored and white grid items for Mondrian replica -->
+        <div class="item red"></div>
+        <div class="item white1"></div>
+        <div class="item white2"></div>
+        <div class="item white3"></div>
 
-    <div class="container">
-      <div class="item red"></div>
-      <div class="item white1"></div>
-      <div class="item white2"></div>
-      <div class="item white3"></div>
+        <div class="item blue"></div>
+        <div class="item white4"></div>
 
-      <div class="item blue"></div>
-      <div class="item white4"></div>
-
-      <div class="item"></div>
-      <div class="item yellow"></div>
-      <div class="item black"></div>
+        <div class="item"></div>
+        <div class="item yellow"></div>
+        <div class="item black"></div>
+      </div>
     </div>
+
+    <!-- Footer HTML -->
+    <footer class="footer">
+      <p>© 2024 Junaid Arif</p>
+      <p>
+        <a
+          href="https://junaid-mohammad.github.io/HTML-Portfolio-Website/"
+          target="_blank"
+          >Website</a
+        >
+        |
+        <a href="https://github.com/junaid-mohammad" target="_blank">GitHub</a>
+        |
+        <a
+          href="https://www.linkedin.com/in/junaidarif-mohammad/"
+          target="_blank"
+          >LinkedIn</a
+        >
+        |
+        <a href="mailto:mohammad.junaidarif@mail.mcgill.ca">Email</a>
+      </p>
+    </footer>
   </body>
 </html>
